--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ main {
   background-color: rgb(6, 2, 2);
   width: 100%;
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns:auto;
+  grid-template-rows: auto;
+  justify-content: baseline;
 
 }
 
@@ -30,13 +32,13 @@ p {
 
 footer {
   display: grid;
+  grid-template-columns: flex-end;
   justify-content: flex end;
   padding: 3em 0;
   text-align: center;
   width: 100%;
   height: 100%;
-  bottom: 0;
-  position: relative;
+ 
 }
 
 /*# sourceMappingURL=styles.css.map */
